# worktimer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pre_commit.sh  precommit_run.sh  pyproject.toml  requirements.txt  test_config.py  test_main.py  test_main_bugfixes.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yaml  pre-commit.yml  python-package.yml
src/: config.py  worktimer.py
tests/: test_config.py  test_main.py  test_main_bugfixes.py
