[project]
name = "worktimer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.12.3",
    "python-dotenv==1.1.1",
    "typed-json-db==0.3.0",
    "typer==0.20.0",
]

[dependency-groups]
dev = [
    "freezegun==1.5.5",
    "pre-commit==4.3.0",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "ruff==0.14.2",
]
